--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
@@ -287,10 +287,10 @@
   font-size: 0.8em;
 }
 .dotvvm-contrib-cookie-bar__buttons > div {
-  display: flex;
-  flex-flow: row nowrap;
+  display: inline-grid;
   align-items: stretch;
   justify-content: stretch;
+  grid-template-columns: repeat(2, minmax(1rem, 1fr));
   gap: 1em;
 }
 .dotvvm-contrib-cookie-bar .toggle-button {
