--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
@@ -21,14 +21,12 @@
 
     &__dialog {
         --dialog-display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         display: var(--dialog-display);
         width: calc(100% - 2em);
         max-width: 40em;
+        margin-inline: auto;
         max-height: 90vh;
+        margin-block: auto;
         border-radius: var(--dialog_border-radius);
         color: var(--color-text);
         overflow: hidden;
@@ -158,6 +156,7 @@
     }
 
     &__details {
+        --summary-character: '+';
         @include border('bottom');
 
         &:last-child {
@@ -165,6 +164,11 @@
         }
 
         &[open] {
+            --summary-character: '–';
+
+            > summary {
+                --color-background: var(--color-hover);
+            }
         }
 
         > summary {
@@ -174,7 +178,7 @@
             gap: 1rem;
             align-items: center;
             justify-content: center;
-            padding: .9em 1em;
+            padding: .5em 1em;
             justify-content: space-between;
             height: 3em;
             overflow: hidden;
@@ -187,10 +191,10 @@
             }
 
             &:hover {
-                --color-background: var(--color-hover)
+                --color-background: var(--color-hover);
             }
 
-            &::-webkit-details-marker {
+            &::-webkit-details-marker, &::marker {
                 display: none;
             }
 
@@ -207,16 +211,24 @@
     }
 
     &__rule {
+        display: inline-flex;
+        gap: .5em;
         left: 2.5em;
         z-index: 10;
-        font-size: 0.875em;
+        font-size: clamp(14px, 3vh, 16px);
         font-weight: 600;
         gap: .8em;
-        white-space: nowrap;
-        justify-self: flex-start;
+        align-items: center;
 
         @include res-max-tablet {
             font-size: .7em;
+        }
+
+        &:before {
+            content: var(--summary-character);
+            font-size: clamp(16px, 2em, 24px);
+            line-height: 1;
+            color: var(--color-success);
         }
     }
 
@@ -226,7 +238,7 @@
 
         > p {
             padding: 0 1em 1em;
-            font-size: 1em;
+            font-size: clamp(14px, 2em, 16px);
             margin-top: 1em;
             margin-bottom: 0;
         }
