--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -20,12 +20,7 @@
     color: var(--color-text);
 
     &__dialog {
-        --dialog-display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: var(--dialog-display);
+        display: var(--dialog-display, none);
         width: calc(100% - 2em);
         max-width: 40em;
         max-height: 90vh;
@@ -205,7 +200,7 @@
     &__rule {
         left: 2.5em;
         z-index: 10;
-        font-size: 0.875em;
+        font-size: 16px;
         font-weight: 600;
         gap: .8em;
         white-space: nowrap;
@@ -222,7 +217,7 @@
 
         > p {
             padding: 0 1em 1em;
-            font-size: 1em;
+            font-size: 16px;
             margin-top: 1em;
             margin-bottom: 0;
         }
