--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
@@ -20,13 +20,10 @@
     color: var(--color-text);
 
     &__dialog {
-        --dialog-display: none;
-        display: var(--dialog-display);
+        display: var(--dialog-display, none);
         width: calc(100% - 2em);
         max-width: 40em;
-        margin-inline: auto;
         max-height: 90vh;
-        margin-block: auto;
         border-radius: var(--dialog_border-radius);
         color: var(--color-text);
         overflow: hidden;
@@ -215,7 +212,7 @@
         gap: .5em;
         left: 2.5em;
         z-index: 10;
-        font-size: clamp(14px, 3vh, 16px);
+        font-size: 16px;
         font-weight: 600;
         gap: .8em;
         align-items: center;
@@ -238,7 +235,7 @@
 
         > p {
             padding: 0 1em 1em;
-            font-size: clamp(14px, 2em, 16px);
+            font-size: 16px;
             margin-top: 1em;
             margin-bottom: 0;
         }
