--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.css
@@ -1,4 +1,5 @@
-﻿.dotvvm-contrib-cookie-bar {
+﻿@charset "UTF-8";
+.dotvvm-contrib-cookie-bar {
   --cookie-display: none;
   --color-background: hsl(0, 0%, 100%);
   --color-primary: hsl(210, 2%, 17%);
@@ -17,12 +18,7 @@
   color: var(--color-text);
 }
 .dotvvm-contrib-cookie-bar__dialog {
-  --dialog-display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: var(--dialog-display);
+  display: var(--dialog-display, none);
   width: calc(100% - 2em);
   max-width: 40em;
   max-height: 90vh;
@@ -148,10 +144,17 @@
   overflow: auto;
 }
 .dotvvm-contrib-cookie-bar__details {
+  --summary-character: "+";
   border-bottom: var(--border-width) solid var(--color-border);
 }
 .dotvvm-contrib-cookie-bar__details:last-child {
   border-bottom-width: 0;
+}
+.dotvvm-contrib-cookie-bar__details[open] {
+  --summary-character: "–";
+}
+.dotvvm-contrib-cookie-bar__details[open] > summary {
+  --color-background: var(--color-hover);
 }
 .dotvvm-contrib-cookie-bar__details > summary {
   background-color: var(--color-background);
@@ -160,7 +163,7 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  padding: 0.9em 1em;
+  padding: 0.5em 1em;
   justify-content: space-between;
   height: 3em;
   overflow: hidden;
@@ -174,7 +177,10 @@
   }
 }
 .dotvvm-contrib-cookie-bar__details > summary:hover {
-  --color-background: var(--color-hover) ;
+  --color-background: var(--color-hover);
+}
+.dotvvm-contrib-cookie-bar__details > summary::-webkit-details-marker, .dotvvm-contrib-cookie-bar__details > summary::marker {
+  display: none;
 }
 .dotvvm-contrib-cookie-bar__details > summary > small {
   font-size: small;
@@ -187,18 +193,25 @@
   }
 }
 .dotvvm-contrib-cookie-bar__rule {
+  display: inline-flex;
+  gap: 0.5em;
   left: 2.5em;
   z-index: 10;
-  font-size: 0.875em;
+  font-size: 16px;
   font-weight: 600;
   gap: 0.8em;
-  white-space: nowrap;
-  justify-self: flex-start;
+  align-items: center;
 }
 @media only screen and (max-width: 768px) {
   .dotvvm-contrib-cookie-bar__rule {
     font-size: 0.7em;
   }
+}
+.dotvvm-contrib-cookie-bar__rule:before {
+  content: var(--summary-character);
+  font-size: clamp(16px, 2em, 24px);
+  line-height: 1;
+  color: var(--color-success);
 }
 .dotvvm-contrib-cookie-bar__desc {
   display: block;
@@ -206,7 +219,7 @@
 }
 .dotvvm-contrib-cookie-bar__desc > p {
   padding: 0 1em 1em;
-  font-size: 1em;
+  font-size: 16px;
   margin-top: 1em;
   margin-bottom: 0;
 }
