--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -153,6 +153,7 @@
     }
 
     &__details {
+        --summary-character: '+';
         @include border('bottom');
 
         &:last-child {
@@ -160,6 +161,11 @@
         }
 
         &[open] {
+            --summary-character: '–';
+
+            > summary {
+                --color-background: var(--color-hover);
+            }
         }
 
         > summary {
@@ -169,7 +175,7 @@
             gap: 1rem;
             align-items: center;
             justify-content: center;
-            padding: .9em 1em;
+            padding: .5em 1em;
             justify-content: space-between;
             height: 3em;
             overflow: hidden;
@@ -182,7 +188,11 @@
             }
 
             &:hover {
-                --color-background: var(--color-hover)
+                --color-background: var(--color-hover);
+            }
+
+            &::-webkit-details-marker, &::marker {
+                display: none;
             }
 
             > small {
@@ -198,16 +208,24 @@
     }
 
     &__rule {
+        display: inline-flex;
+        gap: .5em;
         left: 2.5em;
         z-index: 10;
         font-size: 16px;
         font-weight: 600;
         gap: .8em;
-        white-space: nowrap;
-        justify-self: flex-start;
+        align-items: center;
 
         @include res-max-tablet {
             font-size: .7em;
+        }
+
+        &:before {
+            content: var(--summary-character);
+            font-size: clamp(16px, 2em, 24px);
+            line-height: 1;
+            color: var(--color-success);
         }
     }
 
