--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.css
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.css
@@ -170,7 +170,7 @@
   cursor: pointer;
   transition: background-color var(--transition-time) ease-in-out;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 425px) {
   .dotvvm-contrib-cookie-bar__details > summary {
     padding: 0.5em;
     height: 2.2em;
@@ -202,9 +202,9 @@
   gap: 0.8em;
   align-items: center;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 425px) {
   .dotvvm-contrib-cookie-bar__rule {
-    font-size: 0.7em;
+    font-size: 14px;
   }
 }
 .dotvvm-contrib-cookie-bar__rule:before {
@@ -222,6 +222,11 @@
   font-size: 16px;
   margin-top: 1em;
   margin-bottom: 0;
+}
+@media only screen and (max-width: 425px) {
+  .dotvvm-contrib-cookie-bar__desc > p {
+    font-size: 14px;
+  }
 }
 .dotvvm-contrib-cookie-bar__desc > details {
   border-top: var(--border-width) solid var(--color-border);
