--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -345,6 +345,7 @@
         width: 40px;
         min-width: 40px;
         height: 24px;
+        font-size: 0;
         background-color: var(--toggle-bg);
         border-radius: 12px;
         transition: background-color var(--transition-time) ease-in-out;
