--- a/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib.CookieBar/Styles/DotVVM.Contrib.CookieBar.scss
@@ -27,6 +27,7 @@
         border-radius: var(--dialog_border-radius);
         color: var(--color-text);
         overflow: hidden;
+        padding: 0;
 
         &::backdrop {
             background: hsla(0, 0%, 0%, .6);
